# analysistree-onnx-inferrer

./: ATPALinkDef.h  ATreePredictionAdder.cpp  ATreePredictionAdder.hpp  CMakeLists.txt  ONNXConfigManager.cpp  ONNXConfigManager.hpp  ONNXRunner.cpp  ONNXRunner.hpp  ONNXSingleBinModel.cpp  ONNXSingleBinModel.hpp  README.md  export.sh  main.cpp
scripts/: export.sh
src/: ATPAConfig.cmake.in  ONNXConfigParser.cpp  ONNXConfigParser.hpp  main.cpp
